# oto

./: Cargo.toml  README.md
src/: app.rs  backend.rs  config.rs  discord.rs  main.rs  ui.rs
src/audio/: wasapi.rs
src/core/: backend.rs  errors.rs  mod.rs
src/discord/: ipc.rs  mod.rs  oauth.rs
src/input/: mapping.rs  mod.rs
src/ui/: mixer.rs  mod.rs  settings.rs  theme.rs
wix/: License.rtf  main.wxs
