[package]
name = "raw_mixer"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
image = "0.25.10"
rdev = "0.5.3"
reqwest = { version = "0.13.3", features = ["json"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
tokio = { version = "1.52.3", features = ["full"] }
tray-icon = "0.24.0"
windows = { version = "0.62.2", features = ["Win32_Devices_Properties", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }
